Added muut forums

--- a/app/views/dialectic/main/index.html.erb
+++ b/app/views/dialectic/main/index.html.erb
@@ -1,3 +1,4 @@
-<center>
-<%= image_tag('dialectic/under-construction.jpg') %>
-</center>
+<div dir="ltr" style="text-align: left;" trbidi="on">
+	<a class="moot" href="https://moot.it/i/spiritualseed">Spiritualseed forum</a>
+	<%= javascript_include_tag src="//cdn.moot.it/1/moot.min.js" %>
+</div>
