--- a/app/views/layouts/dialectic/application.html.erb
+++ b/app/views/layouts/dialectic/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Dialectic</title>
-  <%= stylesheet_link_tag    "dialectic/application", media: "all" %>
-  <%= javascript_include_tag "dialectic/application" %>
+ <!-- <%= stylesheet_link_tag    "dialectic/application", media: "all" %>
+  <%= javascript_include_tag "dialectic/application" %>-->
   <%= csrf_meta_tags %>
 </head>
 <body>
