Updating muut cdn url

--- a/app/views/dialectic/main/index.html.erb
+++ b/app/views/dialectic/main/index.html.erb
@@ -1,4 +1,4 @@
 <div dir="ltr" style="text-align: left;" trbidi="on">
 	<a class="moot" href="https://moot.it/i/spiritualseed">Spiritualseed forum</a>
-	<%= javascript_include_tag src="//cdn.moot.it/1/moot.min.js" %>
+	<%= javascript_include_tag src="//cdn.muut.com/1/moot.min.js" %>
 </div>
